--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/createGame/createGame",
     "pages/myGame/myGame",
-    "pages/enrol/enrol"
+    "pages/enrol/enrol",
+    "pages/refereeInfo/refereeInfo"
   ],
   "window":{
     "backgroundTextStyle":"light",
@@ -23,6 +24,10 @@
     {
       "pagePath": "pages/myGame/myGame",
       "text": "我的比赛"
+    },
+    {
+      "pagePath": "pages/refereeInfo/refereeInfo",
+      "text": "裁判信息"
     }]
   },
   "debug": true
