--- a/project.config.json
+++ b/project.config.json
@@ -4,22 +4,25 @@
 		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
-		"minified": true
+		"minified": true,
+		"newFeature": true
 	},
-	"compileType": "weapp",
-	"libVersion": "1.5.2",
+	"compileType": "miniprogram",
+	"libVersion": "1.9.9",
 	"appid": "wx9b38dcab2de2fd02",
 	"projectname": "%E8%A3%81%E5%88%A4",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
-		"weapp": {
-			"current": -1,
-			"list": []
-		},
 		"search": {
 			"current": -1,
 			"list": []
 		},
 		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"miniprogram": {
 			"current": -1,
 			"list": []
 		}
